--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -10,12 +10,12 @@ target_compile_options(playground PRIVATE
 
 target_link_libraries(playground PRIVATE kuro)
 
-add_executable(clear clear.cpp)
+# add_executable(clear clear.cpp)
 
-# turns all warnings into errors
-target_compile_options(clear PRIVATE
-    $<$<CXX_COMPILER_ID:MSVC>:/W4 /WX>
-    $<$<NOT:$<CXX_COMPILER_ID:MSVC>>:-Wall -Wextra -pedantic -Werror>
-)
+# # turns all warnings into errors
+# target_compile_options(clear PRIVATE
+#     $<$<CXX_COMPILER_ID:MSVC>:/W4 /WX>
+#     $<$<NOT:$<CXX_COMPILER_ID:MSVC>>:-Wall -Wextra -pedantic -Werror>
+# )
 
-target_link_libraries(clear PRIVATE kuro)
+# target_link_libraries(clear PRIVATE kuro)
